toegevoegd. Gebruik `handhaafJPTMedewerkerCodeIsLogin=1`. Bij verstek geldt
`handhaafJPTMedewerkerCodeIsLogin=0` . Deze instelling dient om uitsluitend
medewerkers te verwerken waarbij Magister->Code gelijk is aan
Magister->loginaccount.naam. Dit wordt in een speciaal geval voor JPT gedaan om
dubbele identiteiten weg te filteren. 

* bugfix: In sommige gevallen werden teveel medewerkers afgekeurd voor verdere
verwerking wanneer code of loginaccount.name niet gelijk of ingevuld waren.
Config `handhaafJPTMedewerkerCodeIsLogin=0` verhelpt dat. 

## 20200109 
* wijziging: excl_docent en incl_docent filters filteren niet op Code, maar op Id. 
* wijziging: duidelijkere logging, maakt geen gebruik van PowerShell transcripts, maar dupliceert alleen consoleuitvoer naar log. 
* documentatie over regex uitgebreid met escape karakter, link naar documentatie, voorbeeld.

## 20200902
* wijziging: (Ophalen-Magisterdata.ps1) altijd docenten zonder id uitfilteren

## 20200902b
* wijziging: configvariabelen 'teamid_prefix' en 'teamnaam_suffix' toegevoegd
* (Transformeren-Naar-SchoolDataSync.ps1) geoptimaliseerd : ~~25% snelheidswinst
* Exceptions worden ook gelogd naar het logbestand

## 20201127
* Preciezere definitie van methoden voor het koppelen van identiteiten. Configuratievariabelen:
** `leerling_id = login`
** `leerling_id = email`
** `medewerker_id = login`
** `medewerker_id = code`
** `medewerker_id = csv_upn`
* Verouderde parameters : `useemail`, `ADsearchscope`, `ADserver` . Opzoeken van UserPrincipalName in Active Directory wordt *niet* meer ondersteund! Gebruik hiervoor in de plaats een CSV-opzoektabel. 
* resultaat 1 bij fout.
* configvariabelen gecreeerd in globale scope.
* schonere uitvoer en voortgang.
* beknoptere foutmeldingen.
* fout in documentatie hersteld omtrent configuratiebestand-parameter. Aliassen toegevoegd.
* Herindeling Ophalen-MagisterData.ps1.

## TO DO

* SDS V2 format 
* parameter viewonly toont resultaat.
