@@ -1,13 +1,17 @@
-brin=33AB
-schoolnaam=Castricum College
-magisterUser=PietjePuk
-magisterPass=Gehe!mWachtw00rd
-magisterUrl=https://castricum.swp.nl:8800/doc
-teamnaam_prefix=CC 1920
-maakklassenteams=0
+# Voorbeeld Teamsync.ini configuratiebestand
 datainvoermap=data_in
 datakladmap=data_temp
 datauitvoermap=data_uit
-useemail=1
-ADsearchbase=DC=school,DC=forest,DC=cloud
-ADserver=school-dc1.school.forest.cloud
+
+magisterUser=PietjePuk
+magisterPass=Gehe!mWachtw00rd
+magisterUrl=https://castricum.swp.nl:8800/doc
+
+brin=33AB
+schoolnaam=Castricum College
+teamid_prefix=CC 2021
+teamnaam_prefix=CC
+teamnaam_suffix=2021
+maakklassenteams=0
+leerling_id=loginaccount
+medewerker_id=loginaccount
